# uavsdk

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE.md  README.md  TODO.md  package.xml
.github/workflows/: c-cpp.yml
docker/: Dockerfile
docs/commands/try_rtpl/: trtpl.puml  trtpl_tree.puml
docs/commands/try_rtpl/subtrees/: CenterAboveMarker.puml  CheckSearchTimedOutToLand.puml  GoToRTLLocation.puml  Landing.puml  OrientationRegulation.puml  PreparePIDs.puml
docs/plantuml/: data_depndency_manager.puml
doxygen/html/: annotated.html  base__interfaces_8hpp_source.html  behaviour__interfaces_8hpp_source.html  classBird-members.html  classBird.html  classBird__coll__graph.map  classBird__inherit__graph.md5  classCat-members.html  classCat.html  classCat__coll__graph.map  classCat__coll__graph.md5  classDog-members.html  classDog.html  classDog__coll__graph.md5  classDog__inherit__graph.map  classExecutor-members.html  classExecutor.html  classExecutor__coll__graph.md5  classExecutor__inherit__graph.map  classFailed-members.html  classFailed.html  classFailed__inherit__graph.map  classFailed__inherit__graph.md5  classIAnimal-members.html  classIAnimal.html  classIAnimal__coll__graph.map  classIAnimal__coll__graph.md5  classIAnimal__inherit__graph.map  classIAnimal__inherit__graph.md5  classSuccess-members.html  classSuccess.html  classSuccessAfterRunning-members.html  classSuccessAfterRunning.html  classSuccessAfterRunning__coll__graph.map  classSuccessAfterRunning__coll__graph.md5  classSuccess__coll__graph.map  classSuccess__coll__graph.md5  classZoo-members.html  classZoo.html  classes.html  (+376 more)
doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  (+7 more)
include/uavsdk/command_manager/: README.md  behaviour_interfaces.hpp  blackboard.hpp  command_impl.hpp  command_interface.hpp  conditial_executor.hpp  control_nodes.hpp  executors.hpp  manager.hpp  while_not_success.hpp
include/uavsdk/command_manager/impl/agrilab_cmd_manager/: cmd_manager.hpp  command_data.hpp  external_resource.hpp
include/uavsdk/command_manager/impl/agrilab_cmd_manager/commands/: go_to_location.hpp  land.hpp  path_following.hpp  take_off.hpp  trtpl.puml  trtpl_tree.puml  try_return_to_prec_land.hpp
include/uavsdk/command_manager/impl/agrilab_cmd_manager/conditions/: marker_search_is_set_up.hpp  marker_visible.hpp  search_timed_out.hpp
include/uavsdk/data_adapters/cxx/: cxx.hpp
include/uavsdk/data_adapters/ros2/geometry_msgs/: point32.hpp  pose.hpp  quaternion.hpp
include/uavsdk/fcu_telemetry_collector/: mavsdk_fcu_telemetry_collector.hpp
include/uavsdk/kalman_filters/ukf/: ukf.hpp
include/uavsdk/navigation/: conversions.hpp  coordinates.hpp
include/uavsdk/uav_control_interfaces/: data_collector_implementations.hpp  data_collector_interfaces.hpp
include/uavsdk/useful_data_lib/: base_interfaces.hpp  useful_data_impl.hpp  useful_data_interfaces.hpp  utils.hpp
include/uavsdk/utils/: conversion_functions.hpp  coversion_functions.hpp  cpp_custom_extras.hpp
scripts/: install_dependecies.bash  install_dependencies.bash  run_docker_ci.bash
src/: bh_test.cpp  command_tests.cpp  cpp.cpp  inheritance_tests.cpp  tests.cpp  ukf_test.cpp
test/: blackboard_test.cpp  blackboard_variable_test.cpp  type_interface_test.cpp  unimapstr_test.cpp
